deployments/nginx-lmao/00app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lmao
  namespace: nginx-lmao
spec:
  selector:
    matchLabels:
      app: nginx-lmao
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-lmao
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.3-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: nginx-lmao-pvc
      restartPolicy: Always
