deployments/nginx-lmao/02service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lmao
  namespace: nginx-lmao
spec:
  selector:
    app: nginx-lmao
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
