deployments/nginx-lmao/03ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-lmao-ingressroute
  namespace: nginx-lmao
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lmao.thexiao77.com`)
      kind: Rule
      services:
        - name: nginx-lmao
          port: 80
